src/objects/Apttus__WizardInputControlRuntime__c.object
<CustomObject>
    <description>Input Control instance within a runtime wizard</description>
    <fields>
        <fullName>Apttus__InputRepeatSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Input Repeat Sequence</description>
        <inlineHelpText>Input Repeat Sequence</inlineHelpText>
        <label>Input Repeat Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__ResponseValue__c</fullName>
        <description>Response Value that the user entered during runtime.</description>
        <inlineHelpText>Response Value that the user entered during runtime.</inlineHelpText>
        <label>Response Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the design input control</description>
        <inlineHelpText>Lookup to the design input control</inlineHelpText>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the input group</description>
        <inlineHelpText>Lookup to the input group</inlineHelpText>
        <label>Wizard Input Group</label>
        <referenceTo>Apttus__WizardInputGroup__c</referenceTo>
        <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the wizard step</description>
        <inlineHelpText>Lookup to the wizard step</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepRuntimeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the step runtime</description>
        <inlineHelpText>Lookup to the step runtime</inlineHelpText>
        <label>Wizard Step Runtime</label>
        <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
        <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Input Control Runtime(Deprecated)</label>
    <nameField>
        <label>Wizard Input Control Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Control Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>